force-app/main/default/objects/Sub_District_Master_Data__c/Sub_District_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Master Sub District</label>
    <nameField>
        <label>Sub District Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Sub District</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>