force-app/main/default/objects/Sub_District_Master_Data__c/fields/Asset_Kelurahan_Formula__c.field-meta.xml
<CustomField>
    <fullName>Asset_Kelurahan_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Kelurahan</label>
    <type>Text</type>
</CustomField>