force-app/main/default/objects/Sub_District_Master_Data__c/fields/district_code__c.field-meta.xml
<CustomField>
    <fullName>district_code__c</fullName>
    <label>district_code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>