force-app/main/default/objects/Sub_District_Master_Data__c/fields/District_Id__c.field-meta.xml
<CustomField>
    <fullName>District_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Id</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Sub Districts Master Data</relationshipLabel>
    <relationshipName>Sub_Districts_Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>