force-app/main/default/objects/Sub_District_Master_Data__c/fields/Legal_Kelurahan_Formula__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kelurahan_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Kelurahan</label>
    <type>Text</type>
</CustomField>